[gd_scene load_steps=14 format=3 uid="uid://dy07v0ifru5hl"]

[ext_resource type="Script" path="res://Scenes/hub_screen.gd" id="1_1feo4"]
[ext_resource type="Theme" uid="uid://dru1asdu8d5c7" path="res://theme.tres" id="1_t1018"]
[ext_resource type="Texture2D" uid="uid://duyrxyduvf300" path="res://textures/UI/backpack_icon.png" id="3_5vbep"]
[ext_resource type="Script" path="res://Scenes/TextWindowSound.gd" id="3_r7xia"]
[ext_resource type="Script" path="res://scripts/price_button.gd" id="4_i0fp4"]
[ext_resource type="Texture2D" uid="uid://bw850ei4y2w6a" path="res://textures/UI/stamina_icon.png" id="5_5k3hn"]
[ext_resource type="AudioStream" uid="uid://bs3mw8aho6h7c" path="res://sounds/tone.wav" id="5_o4q04"]
[ext_resource type="Script" path="res://Scenes/AudioStreamPlayer.gd" id="6_6721r"]
[ext_resource type="Script" path="res://Scenes/StaminaPriceButton.gd" id="6_g5v72"]
[ext_resource type="Texture2D" uid="uid://crgt5sag8ao2a" path="res://textures/UI/energy_icon.png" id="6_hj48y"]
[ext_resource type="Script" path="res://scripts/EnergyPriceButton.gd" id="7_jh47v"]
[ext_resource type="Script" path="res://Scenes/Proceed.gd" id="9_qx634"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q5o5x"]
random_pitch = 1.02
streams_count = 1
stream_0/stream = ExtResource("5_o4q04")
stream_0/weight = 1.0

[node name="HubScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1feo4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t1018")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 75

[node name="FundsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("1_t1018")
theme_override_font_sizes/font_size = 64
text = "funds: something broke"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="UpgradesPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(750, 700)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_t1018")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5vbep")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "backpack enhance"
horizontal_alignment = 1

[node name="BackpackPriceButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "price"
text_overrun_behavior = 1
script = ExtResource("4_i0fp4")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_5k3hn")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "stamina enhance"
horizontal_alignment = 1

[node name="StaminaPriceButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "price"
text_overrun_behavior = 1
script = ExtResource("6_g5v72")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_hj48y")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "energy drink"
horizontal_alignment = 1

[node name="EnergyPriceButton" type="Button" parent="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "price"
text_overrun_behavior = 1
script = ExtResource("7_jh47v")

[node name="Proceed" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("1_t1018")
theme_override_font_sizes/font_size = 60
text = " proceed "
script = ExtResource("9_qx634")

[node name="TextPanel" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(750, 700)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("1_t1018")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextPanel/MarginContainer"]
layout_mode = 2
alignment = 2
script = ExtResource("3_r7xia")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/TextPanel/MarginContainer/VBoxContainer"]
stream = SubResource("AudioStreamRandomizer_q5o5x")
volume_db = -9.0
max_polyphony = 15
script = ExtResource("6_6721r")
sounding = false

[connection signal="button_up" from="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/BackpackPriceButton" to="." method="_on_backpack_price_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/BackpackPriceButton" to="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/BackpackPriceButton" method="_on_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/StaminaPriceButton" to="." method="_on_backpack_price_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/StaminaPriceButton" to="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/StaminaPriceButton" method="_on_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer/EnergyPriceButton" to="." method="_on_backpack_price_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer/EnergyPriceButton" to="MarginContainer/VBoxContainer/UpgradesPanel/MarginContainer/VBoxContainer/HBoxContainer3/HBoxContainer/EnergyPriceButton" method="_on_button_up"]
[connection signal="button_up" from="MarginContainer/Proceed" to="." method="_on_proceed_button_up"]
